--- a/package.json
+++ b/package.json
@@ -3,6 +3,21 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@types/express": "^4.17.1",
+        "@types/jest": "^24.0.18",
+        "@types/minimist": "^1.2.0",
+        "@types/node": "^12.7.12",
+        "@types/promise": "^7.1.30",
+        "@types/react": "^16.9.5",
+        "@types/react-dom": "^16.9.1",
+        "@types/react-redux": "^7.1.4",
+        "@types/react-router-dom": "^5.1.0",
+        "@types/rimraf": "^2.0.2",
+        "awesome-typescript-loader": "^5.2.1",
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "iconv-lite": "^0.5.0",
+        "minimist": "^1.2.0",
         "mocha": "^6.2.1",
         "react": "^16.10.1",
         "react-dom": "^16.10.1",
@@ -12,14 +27,10 @@
         "redux": "^4.0.4",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
-        "rimraf": "^3.0.0",
-        "body-parser": "^1.19.0",
-        "express": "^4.17.1",
-        "iconv-lite": "^0.5.0",
-        "minimist": "^1.2.0"
+        "rimraf": "^3.0.0"
     },
     "scripts": {
-        "start-server": "cd server && node app",
+        "start-server": "tsc -p ./tsconfig.server.json && cd server/build && node app",
         "start-client": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom --verbose a",
@@ -47,6 +58,7 @@
         "jest": "^24.9.0",
         "jest-enzyme": "^7.1.1",
         "react-redux": "^7.1.1",
-        "selenium-standalone": "^6.16.0"
+        "selenium-standalone": "^6.16.0",
+        "typescript": "^3.6.3"
     }
 }
